# face-fit

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _typos.toml  committed.toml  justfile  lefthook.yml  mise.toml  mkdocs.yml  noxfile.py  osv-scanner.toml  pyproject.toml  release-please-config.json  taplo.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  osv-scanner.yml  release-please.yml  scorecard.yml
docs/: ADR_INDEX.md  how-it-works.md  index.md  reference.md  usage.md
docs/adr/: 0001-record-architecture-decisions.md  0002-geometric-edits-only.md  0003-mediapipe-landmarker-and-crown-segmentation.md  0004-detect-once-architecture.md  0005-typer-rich-cli.md  0006-support-python-3.10-to-latest.md
src/face_fit/: __init__.py  cli.py  compose.py  core.py  landmarks.py  model.py  presets.py  render.py
tests/: conftest.py  test_batch.py  test_cli.py  test_compose.py  test_core.py  test_integration.py  test_landmarks_unit.py  test_model.py  test_presets.py  test_render.py
